--- a/jpa/src/main/resources/application.properties
+++ b/jpa/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=create
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=none
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-source=metadata
+logging.level.org.hibernate.stat=debug
