--- a/security-jwt/pom.xml
+++ b/security-jwt/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.nashtech.rookies</groupId>
         <artifactId>rookies-java</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>com.nashtech.rookies</groupId>
             <artifactId>jpa</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${revision}</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.eclipse.persistence</groupId>
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
-            <version>4.4.0</version>
+            <version>4.5.0</version>
         </dependency>
 
         <dependency>
