--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
-h2.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
-h2.datasource.driverClassName=org.h2.Driver
-h2.datasource.username=sa
-h2.datasource.password=sa
+datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
+datasource.driverClassName=org.h2.Driver
+datasource.username=sa
+datasource.password=sa
 JWT_SECRET=this is a secret
 ADMIN_PASS=apass
