--- a/security-jwt/src/main/resources/application.yaml
+++ b/security-jwt/src/main/resources/application.yaml
@@ -1,15 +1,15 @@
 spring:
+  main:
+    allow-bean-definition-overriding: true
   datasource:
-    url: jdbc:h2:mem:testdb;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
-    driverClassName: org.h2.Driver
-    username: sa
-    password:
+    url: ${datasource.url}
+    username: ${datasource.username}
+    password: ${datasource.password}
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+#    database-platform: org.hibernate.dialect.H2Dialect
     show-sql: true
     properties:
-      hibernate:
-        format_sql: true
+#        format_sql: true
         generate_statistics: none
     open-in-view: false
 logging:
