--- a/security-jwt/pom.xml
+++ b/security-jwt/pom.xml
@@ -44,6 +44,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>com.auth0</groupId>
